# Orion

./: README.md  docker-compose.yml
backend/: .env  .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: logger.py  settings.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  base_model.py  project.py
backend/migrations/: env.py
docker/postgres/: init.sql
